# file-organizer

./: .mypy.ini  pyproject.toml
fileorganizer/: __main__.py
fileorganizer/arguments/: __init__.py  definitions.py  parsing.py
fileorganizer/files/: __init__.py  actions.py  definitions.py  helpers.py
fileorganizer/shared/arguments/: definitions.py  parser.py
fileorganizer/shared/enums/: base.py
fileorganizer/shared/helpers/: generators.py
fileorganizer/shared/logging/: __init__.py  logger.py  text.py
scripts/: lint.sh
